footer aligned correctly on about and skills pages

--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,11 @@ nav li a, nav li span {
     color: #efefef;
 }
 
+footer {
+    bottom: 0;
+    left: 0;
+}
+
 header.splash {
     height: 92%;
     background: linear-gradient(rgba(23, 22, 23, 0.15), rgba(23, 22, 23, 0.15)), url(/img/software-development-consulting-wide.jpg) no-repeat top center fixed;
